syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-auth/api/proto/v1";

message ConnectVkRequest {
  string id = 1;
  string code = 2;
  string state = 3;
}

message ConnectVkResponse {
  string message = 1;
}
