syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-auth/api/proto/v1";

message DeleteGoogleConnectionRequest {
  string id = 1;
}

message DeleteGoogleConnectionResponse {
  string message = 1;
}
