syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-auth/api/proto/v1";

message RequestGoogleOAuthRequest {
  string redirectUrl = 1;
}

message RequestGoogleOAuthResponse {
  string link = 1;
}
