syntax = "proto3";
package v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/mephistolie/chefbook-backend-auth/api/proto/v1";

message SessionResponse {
  string profileId = 1;
  string accessToken = 2;
  string refreshToken = 3;
  google.protobuf.Timestamp expirationTimestamp = 4;
  google.protobuf.Timestamp profileDeletionTimestamp = 5;
}
