syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-auth/api/proto/v1";

message SignInGoogleRequest {
  string code = 1;
  string state = 2;
  string redirectUrl = 3;
  string ip = 4;
  string userAgent = 5;
}
